syntax = "proto3";

option go_package = "github.com/c12s/oort/pkg/api";

package proto;

message AttributeId {
  string name = 1;
}

message Attribute {
  AttributeId id = 1;
  enum AttributeKind {
    INT64 = 0;
    FLOAT64 = 1;
    STRING = 2;
    BOOL = 3;
  }
  AttributeKind kind = 2;
  bytes value = 3;
}

message AttributeList {
  repeated Attribute attributes = 1;
}

message Int64Attribute {
  int64 value = 1;
}

message Float64Attribute {
  double value = 1;
}

message StringAttribute {
  string value = 1;
}

message BoolAttribute {
  bool value = 1;
}

message Resource {
  string id = 1;
  string kind = 2;
}

message Permission {
  string name = 1;
  enum PermissionKind {
    ALLOW = 0;
    DENY = 1;
  }
  PermissionKind kind = 2;
  Condition condition = 3;
}

message Condition {
  string expression = 1;
}

message GrantedPermission {
  string name = 1;
  Resource object = 2;
}